--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgb(163, 163, 163);
+    background-color: rgb(158, 157, 165);
 }
 
 .box{
@@ -48,28 +48,28 @@ body{
 .arm-left{
     position: absolute;
     background-color: rgb(245, 245, 245);
-    width: 60%;
-    height:50%;
+    width: 15%;
+    height:20%;
     transform: rotate(40deg);
-    clip-path: ellipse(14% 36% at 50% 50%);
-    top: 40%;
-    left:-20%;
+    border-radius: 50%;
+    top: 60%;
+    left:-8%;
 }
 
 .arm-right{
     position: absolute;
     background-color: rgb(245, 245, 245);
-    width: 60%;
-    height:50%;
+    width: 15%;
+    height:20%;
     transform: rotate(-40deg);
-    clip-path: ellipse(14% 36% at 50% 50%);
-    top: 40%;
-    right:-20%;
+    border-radius: 50%;
+    top: 60%;
+    right:-8%;
 }
 
 .frame{
     position: absolute;
-    background-color: rgb(44, 44, 44);
+    background-color: rgb(47, 47, 49);
     border-radius: 3%;
     width: 88%;
     height: 45%;
@@ -79,7 +79,7 @@ body{
 
 .screen{
     position: absolute;
-    background-color: rgb(66, 66, 66);
+    background-color: rgb(66, 65, 70);
     border-radius: 2%;
     width: 70%;
     height: 65%;
@@ -106,21 +106,31 @@ body{
     left: 5%;
 }
 
-.d-pad{
+.d-pad-1{
     position: absolute;
-    clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
-    /* transform: rotate(45deg); */
-    background-color: rgb(63, 63, 63);
+    transform: rotate(45deg);
+    background-color: rgb(47, 47, 49);
     height: 15%;
-    width: 27%;
+    width: 10%;
     top: 60%;
-    left: 10%;
-    border-radius: 50%;
+    left: 17%;
+    border-radius: 10%;
+}
+
+.d-pad-2{
+    position: absolute;
+    transform: rotate(-45deg);
+    background-color: rgb(47, 47, 49);
+    height: 15%;
+    width: 10%;
+    top: 60%;
+    left: 17%;
+    border-radius: 10%;
 }
 
 .a{
     position: absolute;
-    background-color: rgb(63, 63, 63);
+    background-color: rgb(47, 47, 49);
     height: 11%;
     width: 20%;
     top: 62%;
@@ -130,7 +140,7 @@ body{
 
 .b{
     position: absolute;
-    background-color: rgb(63, 63, 63);
+    background-color: rgb(47, 47, 49);
     height: 3%;
     width: 5%;
     top: 70%;
@@ -143,10 +153,10 @@ body{
     height: 1%;
     width: 10%;
     top: 76%;
-    left: 45%;
-    border-bottom: 4px solid rgb(63, 63, 63);
-    border-left: 4px solid rgb(63, 63, 63);
-    border-right: 4px solid rgb(63, 63, 63);
+    left: 44%;
+    border-bottom: 4px solid rgb(47, 47, 49);
+    border-left: 4px solid rgb(47, 47, 49);
+    border-right: 4px solid rgb(47, 47, 49);
     border-radius: 0 0 20px 20px;
 }
 
@@ -154,7 +164,7 @@ body{
     position: absolute;
     height: 65%;
     width: 28%;
-    background-color: grey;
+    background-color: rgb(124, 122, 131);
     top:-80%;
     left: 36%;
     border-radius: 50%;
@@ -169,4 +179,5 @@ body{
         transform:scale(1);
     }
 }
+
 
